Modify handleSelect to add range and return after complete all requirement - add background color for wrong and right marker to emphasize the moves

--- a/src/components/Gameboard/MarkerList.css
+++ b/src/components/Gameboard/MarkerList.css
@@ -6,9 +6,11 @@
 }
 
 .marker-wrong {
-  border-color: var(--color-red-700);
+  background-color: var(--color-red-700);
+  border-color: var(--color-red-950);
 }
 
 .marker-right {
-  border-color: var(--color-green-400);
+  background-color: var(--color-green-400);
+  border-color: var(--color-green-950);
 }
